Update, including resume

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles/index.css"/>
     <link rel="stylesheet" href="styles/about.css"/>
     <link rel="stylesheet" href="styles/projects.css"/>
+    <link rel="stylesheet" href="styles/resume.css"/>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.1/angular.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.4.2/angular-ui-router.min.js"></script>
     <script src="scripts/app.js"></script>
